src/main/java/com/example/springboot3jwtauthentication/error/InvalidCredentialsException.java
package com.example.springboot3jwtauthentication.error;

public class InvalidCredentialsException extends RuntimeException {
    public InvalidCredentialsException(String message) {
        super(message);
    }
}

